syntax = "proto3";
option csharp_namespace = "MerchandiseService.Grpc";
package MerchandiseService;

import "google/protobuf/empty.proto";

service MerchandiseServiceGrpc {
  rpc AddMerch (AddMerchRequest) returns (google.protobuf.Empty);
  rpc GetInfoAboutIssuanceMerch (google.protobuf.Empty) returns (GetAllMerchResponse);
}

message GetAllMerchResponse {
  repeated GetAllMerchResponseUnit merchs = 1;
}

message GetAllMerchResponseUnit {
  int64 item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
}

message AddMerchRequest {
  string item_name = 1;
  int32 quantity = 2;
}